# ScopeOfWork

./: .gitignore
.github/workflows/: azure-static-web-apps-calm-island-08c473e0f.yml  main_sowcomposer.yml  swa_scopeofwork_frontend.yml
backend/: .env.example  README.md  claude_probe.py  config.py  db.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py  schemas_service.py  startup.sh  tmp_llm_check.py
backend/api/: routers.py  service_router.py
backend/llm_providers/: anthropic_claude.py  azure_openai.py  base.py  factory.py
backend/services/: agents.py  context_builder.py  db_helpers.py  sap_stub.py  scope_agents.py
frontend/: package-lock.json  package.json  staticwebapp.config.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  types.ts
frontend/src/api/: client.ts
frontend/src/components/: AgentPortal.tsx  ChatInput.tsx  ChatPanel.tsx  ConversationDrawer.tsx  ConversationHistory.tsx  ParameterForm.tsx  RevisionStrip.tsx  ScopeRenderer.tsx
frontend/src/context/: WizardContext.tsx
frontend/src/pages/: CommercialScreen.tsx  DetailsScreen.tsx  GoldPlatingScreen.tsx  InitialScreen.tsx  MaterialMatchScreen.tsx  ReviewScreen.tsx  ScopeEditorScreen.tsx  ScopeOutputScreen.tsx  ScopeSourceScreen.tsx  SimilarityScreen.tsx
frontend/src/utils/: exportOutputs.ts
